feat: added function for crust calculation and fade-in/fade-out between iunput and results

--- a/style.css
+++ b/style.css
@@ -1,16 +1,26 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  background-color: rgb(20, 20, 20);
+  overflow: clip;
+  background-image: url("images/pizza_bg.png");
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 1.2rem;
 }
 
 header {
+  background-color: black;
+  min-width: 95vw;
+  margin: -5px;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1.2rem;
 }
 
 #header-logo {
@@ -26,6 +36,7 @@ header {
 main {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 label {
@@ -36,6 +47,7 @@ label {
 p {
   color: black;
   background-color: white;
+  border-radius: 8px;
 }
 
 button {
@@ -43,6 +55,8 @@ button {
   margin-top: 10px;
   width: 50vw;
   padding: 0.5rem 1rem 0.5rem 1rem;
+  align-self: center;
+  border-radius: 8px;
 }
 
 #submit-button {
@@ -50,6 +64,7 @@ button {
   color: darkred;
   font-family: "Arial Narrow Bold", sans-serif;
   font-size: 1.4rem;
+  font-weight: 600;
 }
 
 #clear-button {
@@ -59,20 +74,56 @@ button {
   font-size: 1.4rem;
 }
 
-.results,
-.results-container,
 form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  align-self: center;
+  text-align: center;
+  max-width: 60%;
+}
+
+.form-box {
+  border: white solid 3px;
+  border-radius: 10px;
+  margin: 16px 0 16px 0;
+  max-width: 99%;
+  padding-top: 5px;
+}
+
+#results-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  gap: 10px;
+  position: absolute;
+  left: 10%;
+  width: 80%;
+  opacity: 0.01;
 }
 
 input {
   margin-bottom: 1rem;
   height: 2rem;
   font-size: 1.8rem;
+  max-width: 90%;
+  margin: 10px 0 10px 0px;
+}
+
+.resultsDiv {
+  border: solid yellow 3px;
+  padding: 5px;
+  margin: 5px 5px 20px 5px;
+  border-radius: 12px;
+}
+
+.resultsDiv h2 {
+  font-size: 1.6rem;
 }
 
 .output {
-  padding: 0.2rem 0.3rem 0.2rem 0.5rem;
+  padding: 0.5rem;
+  margin: 20px;
+  border-radius: 6px;
 }
