--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 
 header {
   background-color: black;
-  min-width: 95vw;
+  min-width: 98vw;
   margin: -5px;
   display: flex;
   flex-direction: row;
@@ -84,7 +84,7 @@ form {
 }
 
 .form-box {
-  border: white solid 3px;
+  border: solid yellow 3px;
   border-radius: 10px;
   margin: 16px 0 16px 0;
   max-width: 99%;
@@ -104,11 +104,14 @@ form {
 }
 
 input {
-  margin-bottom: 1rem;
   height: 2rem;
   font-size: 1.8rem;
   max-width: 90%;
   margin: 10px 0 10px 0px;
+}
+
+input:last-child {
+  margin-bottom: 20px;
 }
 
 .resultsDiv {
