feat: adjusted styling and js functionality for suitable desktop view experience

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  overflow: clip;
+  /* overflow: clip; */
   background-image: url("images/pizza_bg.png");
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -57,21 +57,16 @@ button {
   padding: 0.5rem 1rem 0.5rem 1rem;
   align-self: center;
   border-radius: 8px;
+  border: solid white 1px;
 }
 
-#submit-button {
-  background-color: yellow;
-  color: darkred;
-  font-family: "Arial Narrow Bold", sans-serif;
-  font-size: 1.4rem;
-  font-weight: 600;
-}
-
+#submit-button,
 #clear-button {
-  background-color: darkred;
+  background-color: rgb(139, 0, 0);
   color: white;
   font-family: "Arial Narrow Bold", sans-serif;
   font-size: 1.4rem;
+  font-weight: 600;
 }
 
 form {
@@ -84,7 +79,7 @@ form {
 }
 
 .form-box {
-  border: solid yellow 3px;
+  border: solid 3px rgba(255, 245, 0, 0.8);
   border-radius: 10px;
   margin: 16px 0 16px 0;
   max-width: 99%;
@@ -105,9 +100,10 @@ form {
 
 input {
   height: 2rem;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   max-width: 90%;
   margin: 10px 0 10px 0px;
+  text-align: center;
 }
 
 input:last-child {
@@ -115,7 +111,7 @@ input:last-child {
 }
 
 .resultsDiv {
-  border: solid yellow 3px;
+  border: solid 3px rgba(255, 245, 0, 0.8);
   padding: 5px;
   margin: 5px 5px 20px 5px;
   border-radius: 12px;
@@ -123,10 +119,57 @@ input:last-child {
 
 .resultsDiv h2 {
   font-size: 1.6rem;
+  color: rgba(255, 245, 0, 0.8);
 }
 
 .output {
   padding: 0.5rem;
   margin: 20px;
   border-radius: 6px;
+}
+
+@media (min-width: 800px) {
+  header {
+    height: 22vh;
+    justify-content: center;
+    margin-bottom: 0.4rem;
+  }
+  header img {
+    padding-top: 10px;
+    height: 140px;
+    width: auto;
+  }
+  main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  form,
+  #submit-button {
+    justify-self: center;
+    font-size: 1rem;
+    max-width: 90%;
+  }
+  label {
+    margin: 0;
+  }
+  #submit-button,
+  #clear-button {
+    max-width: 50%;
+    font-size: 1rem;
+  }
+  input {
+    max-width: 10vw;
+    margin-bottom: 5px;
+  }
+  #results-container {
+    grid-column: 2/-1;
+    font-size: 0.8rem;
+    h2 {
+      font-size: 1rem;
+    }
+  }
+  .results-div {
+    margin-bottom: -50;
+    padding: 0;
+  }
 }
